still trying to fix transform on mobile

--- a/melissa.css
+++ b/melissa.css
@@ -29,10 +29,9 @@ body {
 }
 ul {
   padding: 0;
-}
-li {
   display: inline-block;
 }
+
 .nav {
   position: fixed;
   display: flex;
